--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/material-bottom-tabs": "^6.2.29",
     "@react-navigation/native": "^6.0.2",
+    "base-64": "^1.0.0",
     "expo": "~51.0.28",
+    "expo-document-picker": "^12.0.2",
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
